fixing headshot dimensions on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -60,7 +60,4 @@ body {
         display:flex;
         font-size: 3rem;
     }
-    #headshot{
-        height:250px;
-    }
 }
